<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mealScheduleFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/previousDayButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_baseline_keyboard_arrow_left_24" />

        <TextView
            android:id="@+id/dateText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/sample_date"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="35sp" />

        <ImageButton
            android:id="@+id/nextDayButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_baseline_keyboard_arrow_right_24" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="15dp"
            android:elevation="8dp"
            android:theme="@style/Theme.MaterialComponents.Light">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:text="@string/breakfast"
                android:textColor="@color/black"
                android:textSize="35sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/breakfastRecipeName"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:gravity="center_horizontal"
                    android:text="@string/no_meal_scheduled"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <ImageView
                    android:layout_width="350dp"
                    android:layout_height="175dp"
                    android:layout_margin="10dp"
                    android:scaleType="centerCrop" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/descheduleBreakfastButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom"
                android:background="@drawable/ic_baseline_delete_24" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="15dp"
            android:theme="@style/Theme.MaterialComponents.Light">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:text="@string/lunch"
                android:textColor="@color/black"
                android:textSize="35sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/lunchRecipeName"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:gravity="center_horizontal"
                    android:text="@string/no_meal_scheduled"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <ImageView
                    android:layout_width="350dp"
                    android:layout_height="175dp"
                    android:layout_margin="10dp"
                    android:scaleType="centerCrop" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/descheduleLunchButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom"
                android:background="@drawable/ic_baseline_delete_24" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="15dp"
            android:theme="@style/Theme.MaterialComponents.Light">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:text="@string/dinner"
                android:textColor="@color/black"
                android:textSize="35sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/dinnerRecipeName"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:gravity="center_horizontal"
                    android:text="@string/no_meal_scheduled"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <ImageView
                    android:layout_width="350dp"
                    android:layout_height="175dp"
                    android:layout_margin="10dp"
                    android:scaleType="centerCrop" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/descheduleDinnerButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom"
                android:background="@drawable/ic_baseline_delete_24" />

        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>

</LinearLayout>