<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/shoppingList"
        android:icon="@drawable/shopping_cart_icon"
        android:title="@string/shopping" />
    <item
        android:id="@+id/recipeList"
        android:icon="@drawable/list_icon"
        android:title="@string/recipes" />
    <item
        android:id="@+id/mealSchedule"
        android:icon="@drawable/calendar_icon"
        android:title="@string/schedule" />
</menu>
