<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30dp"
    tools:context=".presentation.RecipeView">

    <EditText
        android:id="@+id/recipe_instruction_edit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:layout_marginStart="45dp"
        android:layout_marginTop="225dp"
        android:layout_marginEnd="45dp"
        android:autofillHints=""
        android:background="@android:color/transparent"
        android:inputType="textMultiLine"
        android:text="@string/placeholder_instructions"
        android:textSize="20sp"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/recipe_name_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginStart="45dp"
        android:layout_marginTop="65dp"
        android:autofillHints=""
        android:background="@android:color/transparent"
        android:inputType="textMultiLine"
        android:text="@string/placeholder_recipe"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/deleteButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="top|end"
        android:adjustViewBounds="true"
        android:background="@drawable/ic_launcher_delete_foreground"
        android:contentDescription="@string/delete"
        android:hapticFeedbackEnabled="true"
        android:scaleType="center"
        android:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ingredientList"
        android:layout_width="wrap_content"
        android:layout_height="125dp"
        android:layout_gravity="top|start"
        android:layout_marginStart="45dp"
        android:layout_marginTop="100dp"
        app:layoutManager="LinearLayoutManager"
        tools:context=".presentation.RecipeView"
        tools:listitem="@layout/fragment_ingredient_list_item" />

    <ImageButton
        android:id="@+id/editIngredients"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="top|end"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="75dp"
        android:background="@drawable/ic_launcher_edit_foreground" />


</FrameLayout>
