<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".presentation.EditIngredientList">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/editIngredientList"
        android:name="com.example.recipe_planner.RecipeItem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layoutManager="LinearLayoutManager"
        tools:context=".presentation.EditIngredientList"
        tools:listitem="@layout/fragment_edit_ingredient_item" />

</FrameLayout>